Fix a navbar collapse menu bug

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -35,6 +35,8 @@ li,ul {
 
 .navbar-nav>li>a {
     border-radius: 0 0 3px 4px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 nav.navbar-default {
@@ -66,7 +68,6 @@ nav.navbar-default {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -100;
 }
 
 #grey {
@@ -76,7 +77,6 @@ nav.navbar-default {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 60;
 }
 
 .initiallyHidden {
